# Odyssey

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/: engine-config-debug.json  engine-config-release.json
Sources/: CMakeLists.txt  main.cpp
Sources/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Font.cpp  Font.h  Inputs.cpp  Inputs.h  Json.cpp  Json.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
Sources/Game/: CMakeLists.txt  Level.cpp  Level.h  LevelRenderer.cpp  LevelRenderer.h
Sources/Utils/: CMakeLists.txt  Errors.cpp  Log.cpp
Sources/include/: global.h  platform.h
Sources/platform/: linux.cpp  mac.cpp  win.cpp
